2005-01-20  John W. Eaton  <jwe@octave.org>

	* Makefile.in (EXTRAS): Move ov-base-mat.cc ov-base-scalar.cc here.
	(OV_SRC): From here.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* ov-complex.h (octave_complex::any): New function.
	* ov-scalar.h (octave_scalar::any): New function.

	* file-io.cc (Fmkstemp): Fix doc string.  Error message belongs in
	third output value.  From Mats Jansson <mats.e.jansson@home.se>.

2005-01-12  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/find.cc (Ffind): Make it work for character strings.

2005-01-11  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/gplot.l (UNOP): Avoid trailing comment.

2005-01-10  John W. Eaton  <jwe@octave.org>

	* ls-oct-ascii.cc (extract_keyword (std::istream&, const
	string_vector&, std::string&, int&, const bool)):
	Remove duplicate definition.

2004-12-27  Martin Dalecki  <martin@dalecki.de>

	* Cell.cc, c-file-ptr-stream.cc, comment-list.cc, oct-map.cc,
	oct-obj.cc, ov-base.cc, ov-base-int.cc, ov-base-mat.cc,
	ov-base-scalar.cc, ov-bool.cc, ov-bool-mat.cc, ov-builtin.cc,
	ov.cc, ov-cell.cc, ov-ch-mat.cc, ov-colon.cc, ov-complex.cc,
	ov-cs-list.cc, ov-cx-mat.cc, ov-dld-fcn.cc, ov-fcn.cc,
	ov-fcn-handle.cc, ov-fcn-inline.cc, ov-file.cc, ov-int16.cc,
	ov-int32.cc, ov-int64.cc, ov-int8.cc, ov-list.cc, ov-mapper.cc,
	ov-range.cc, ov-re-mat.cc, ov-scalar.cc, ov-streamoff.cc,
	ov-str-mat.cc, ov-struct.cc, ov-typeinfo.cc, ov-uint16.cc,
	ov-uint32.cc, ov-uint64.cc, ov-uint8.cc, ov-usr-fcn.cc,
	ov-va-args.cc, procstream.cc, pt-arg-list.cc, pt-assign.cc,
	pt-binop.cc, pt-bp.cc, pt.cc, pt-cell.cc, pt-check.cc, pt-cmd.cc,
	pt-colon.cc, pt-const.cc, pt-decl.cc, pt-except.cc, pt-exp.cc,
	pt-fcn-handle.cc, pt-id.cc, pt-idx.cc, pt-jump.cc, pt-loop.cc,
	pt-mat.cc, pt-misc.cc, pt-pr-code.cc, pt-select.cc, pt-stmt.cc,
	pt-unop.cc, symtab.cc, token.cc, unwind-prot.cc:
	Delete #pragma implementation

	* Cell.h, c-file-ptr-stream.h, comment-list.h, oct-map.h,
	oct-obj.h, ov-base.h, ov-base-int.h, ov-base-mat.h,